--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,17 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- apache httpclient组件 -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
